Add first Rust benchmarks

--- a/rustynum-rs/Cargo.toml
+++ b/rustynum-rs/Cargo.toml
@@ -6,3 +6,12 @@ edition = "2021"
 [features]
 
 [dependencies]
+
+[dev-dependencies]
+criterion = "0.3"
+ndarray = "0.15.3" 
+nalgebra = "0.29.0"
+
+[[bench]]
+name = "array_benchmarks"
+harness = false  # Allows Criterion to control the benchmarking process
