--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -18,17 +18,26 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - uses: pypa/cibuildwheel@v2.16.5
-        env:
-          CIBW_BUILD: "cp${{ matrix.python-version}}-*"
-          CIBW_BEFORE_BUILD: "cd bindings/python && python setup.py build"
-          CIBW_PROJECT_REQUIRES_PYTHON: ">=3.8"
-          CIBW_REPAIR_WHEEL_COMMAND: "auditwheel repair -w {dest_dir} {wheel}"
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.x'
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install setuptools wheel
+        working-directory: bindings/python
+
+      - name: Build Wheels
+        run: |
+          python setup.py bdist_wheel
+        working-directory: bindings/python
 
       - uses: actions/upload-artifact@v3
         with:
           name: wheelhouse
-          path: ./wheelhouse/*.whl
+          path: bindings/python/dist/*.whl
 
   build_wheels_aarch64:
     name: py${{ matrix.python-version }} on ${{ matrix.os }} (aarch64)
@@ -46,19 +55,26 @@ jobs:
         with:
           platforms: arm64
 
-      - name: Build wheels
-        uses: pypa/cibuildwheel@v2.16.5
-        env:
-          CIBW_BUILD: "cp${{ matrix.python-version}}-*"
-          CIBW_ARCHS: aarch64
-          CIBW_PROJECT_REQUIRES_PYTHON: ">=3.8"
-          CIBW_BEFORE_BUILD: "cd bindings/python && python setup.py build"
-          CIBW_BUILD_VERBOSITY: 3
-          CIBW_ENVIRONMENT_LINUX: PATH="$PATH:$HOME/.cargo/bin" CARGO_NET_GIT_FETCH_WITH_CLI=true
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.x'
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install setuptools wheel
+        working-directory: bindings/python
+
+      - name: Build Wheels (ARM64)
+        run: |
+          python setup.py bdist_wheel
+        working-directory: bindings/python
+
       - uses: actions/upload-artifact@v3
         with:
           name: wheelhouse
-          path: ./wheelhouse/*.whl
+          path: bindings/python/dist/*.whl
 
   build_sdist:
     name: sdist
@@ -72,12 +88,12 @@ jobs:
       - name: Build sdist
         run: |
           pip install --upgrade build
-          cd bindings/python
           python -m build --sdist
+        working-directory: bindings/python
       - uses: actions/upload-artifact@v3
         with:
           name: sdist
-          path: ./dist/*.tar.gz
+          path: bindings/python/dist/*.tar.gz
 
   upload_to_pypi:
     name: Upload to PyPI
@@ -92,7 +108,6 @@ jobs:
         run: pip install twine
       - uses: actions/download-artifact@v3
         with:
-          name: dist
           path: dist
       - name: Upload Distribution to PyPI
         env:
