Directly target subfolders for twine upload

--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -127,4 +127,6 @@ jobs:
         env:
           TWINE_USERNAME: __token__
           TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
-        run: twine upload ./artifacts/*
+        run: |
+          twine upload ./artifacts/sdist/*
+          twine upload ./artifacts/wheelhouse/*
