--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -66,27 +66,22 @@ jobs:
         with:
           python-version: '3.x'
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install setuptools wheel setuptools_rust
-        working-directory: bindings/python
-
-      - name: Install Rust
-        uses: actions-rs/toolchain@v1
-        with:
-          toolchain: nightly-2024-05-04
-          override: true
+      - name: Install cibuildwheel
+        run: python -m pip install cibuildwheel==2.16.5
 
       - name: Build Wheels (ARM64)
         run: |
-          python setup.py bdist_wheel
-        working-directory: bindings/python
+          cibuildwheel --output-dir wheelhouse
+        env:
+          CIBW_BUILD: "cp${{ matrix.python-version }}-*"
+          CIBW_ARCHS: "aarch64"
+          CIBW_BEFORE_BUILD: "pip install setuptools setuptools_rust wheel"
+          CIBW_MANYLINUX_X86_64_IMAGE: manylinux2014
 
       - uses: actions/upload-artifact@v3
         with:
           name: wheelhouse
-          path: bindings/python/dist/*.whl
+          path: wheelhouse/*.whl
 
   build_sdist:
     name: sdist
