--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -77,6 +77,7 @@ jobs:
           CIBW_ARCHS: "aarch64"
           CIBW_BEFORE_BUILD: "pip install setuptools setuptools_rust wheel"
           CIBW_MANYLINUX_X86_64_IMAGE: manylinux2014
+        working-directory: bindings/python
 
       - uses: actions/upload-artifact@v3
         with:
