--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -66,6 +66,13 @@ jobs:
         with:
           python-version: '3.x'
 
+      - name: Install Rust nightly
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: nightly-2024-05-04
+          override: true
+          target: aarch64-unknown-linux-gnu
+
       - name: Install cibuildwheel
         run: python -m pip install cibuildwheel==2.16.5
 
@@ -75,8 +82,9 @@ jobs:
         env:
           CIBW_BUILD: "cp${{ matrix.python-version }}-*"
           CIBW_ARCHS: "aarch64"
-          CIBW_BEFORE_BUILD: "pip install setuptools setuptools_rust wheel"
+          CIBW_BEFORE_BUILD: "pip install setuptools setuptools_rust wheel && source $HOME/.cargo/env"
           CIBW_MANYLINUX_X86_64_IMAGE: manylinux2014
+          CIBW_ENVIRONMENT_LINUX: PATH="$PATH:$HOME/.cargo/bin" CARGO_NET_GIT_FETCH_WITH_CLI=true
         working-directory: bindings/python
 
       - uses: actions/upload-artifact@v3
