--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -82,7 +82,7 @@ jobs:
         env:
           CIBW_BUILD: "cp${{ matrix.python-version }}-*"
           CIBW_ARCHS: "aarch64"
-          CIBW_BEFORE_BUILD: "pip install setuptools setuptools_rust wheel && source $HOME/.cargo/env"
+          CIBW_BEFORE_BUILD: "pip install setuptools setuptools_rust wheel"
           CIBW_MANYLINUX_X86_64_IMAGE: manylinux2014
           CIBW_ENVIRONMENT_LINUX: PATH="$PATH:$HOME/.cargo/bin" CARGO_NET_GIT_FETCH_WITH_CLI=true
         working-directory: bindings/python
