--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -81,13 +81,18 @@ jobs:
         with:
           output-dir: wheelhouse
           package-dir: ./bindings/python
-          before-build: |
-            curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
-            source $HOME/.cargo/env
-            pip install setuptools setuptools_rust wheel
-          build: cp${{ matrix.python-version }}-*
-          archs: aarch64
-          environment-linux: PATH="$PATH:$HOME/.cargo/bin" CARGO_NET_GIT_FETCH_WITH_CLI=true
+        env:
+          CIBW_BUILD: "cp${{ matrix.python-version }}-*"
+          CIBW_ARCHS: "aarch64"
+          CIBW_BEFORE_BUILD: "curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y && source $HOME/.cargo/env && pip install setuptools setuptools_rust wheel"
+          CIBW_ENVIRONMENT_LINUX: PATH="$PATH:$HOME/.cargo/bin" CARGO_NET_GIT_FETCH_WITH_CLI=true
+          # before-build: |
+          #   curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
+          #   source $HOME/.cargo/env
+          #   pip install setuptools setuptools_rust wheel
+          # build: cp${{ matrix.python-version }}-*
+          # archs: aarch64
+          # environment-linux: PATH="$PATH:$HOME/.cargo/bin" CARGO_NET_GIT_FETCH_WITH_CLI=true
 
 
       # - name: Build Wheels (ARM64)
