Update github action and author mail (#1)
* Update github action and author mail

* Only allow manual trigger

* Update action to use setuptools_rust

* Switch to nightly rust for portable simd

* Update deps

* update upload action

* Directly target subfolders for twine upload

* Update wheel for arm64

* Update working directory

* Adjust path for artifact upload

* Add rust for arm64

* Fix broken CIBW env variable

* Try explicit rust installation

* Update

* Adjust project dir for cibuildwheel

* Update

* Use env

* Use nightly rust

* Fix path for uploading wheels

--- a/bindings/python/pyproject.toml
+++ b/bindings/python/pyproject.toml
@@ -2,13 +2,12 @@
 name = "rustynum_py_wrapper"
 version = "0.1.0"
 description = "Python wrapper for the RustyNum library bindings"
-authors = ["IgorSusmelj <igor_7779@hotmail.com>"]
+authors = ["IgorSusmelj <isusmelj@gmail.com>"]
 license = "MIT"
 readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.8"
-# rustynum_py = { path = "dist/rustynum_py-0.1.0.tar.gz", optional = true }
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
