--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -1,6 +1,6 @@
 name: Build and Upload Wheels to PyPI
 
-on: [push, pull_request, workflow_dispatch]
+on: [workflow_dispatch]
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
@@ -18,17 +18,32 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - uses: pypa/cibuildwheel@v2.16.5
-        env:
-          CIBW_BUILD: "cp${{ matrix.python-version}}-*"
-          CIBW_BEFORE_BUILD: "cd bindings/python && python setup.py build"
-          CIBW_PROJECT_REQUIRES_PYTHON: ">=3.8"
-          CIBW_REPAIR_WHEEL_COMMAND: "auditwheel repair -w {dest_dir} {wheel}"
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.x'
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install setuptools wheel setuptools_rust
+        working-directory: bindings/python
+
+      - name: Install Rust nightly
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: nightly-2024-05-04
+          override: true
+
+      - name: Build Wheels
+        run: |
+          python setup.py bdist_wheel
+        working-directory: bindings/python
 
       - uses: actions/upload-artifact@v3
         with:
           name: wheelhouse
-          path: ./wheelhouse/*.whl
+          path: bindings/python/dist/*.whl
 
   build_wheels_aarch64:
     name: py${{ matrix.python-version }} on ${{ matrix.os }} (aarch64)
@@ -46,19 +61,36 @@ jobs:
         with:
           platforms: arm64
 
-      - name: Build wheels
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.x'
+
+      - name: Install Rust nightly
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: nightly-2024-05-04
+          override: true
+          target: aarch64-unknown-linux-gnu
+
+      - name: Install cibuildwheel
+        run: python -m pip install cibuildwheel==2.16.5
+
+      - name: Build Wheels (ARM64)
         uses: pypa/cibuildwheel@v2.16.5
+        with:
+          output-dir: wheelhouse
+          package-dir: ./bindings/python
         env:
-          CIBW_BUILD: "cp${{ matrix.python-version}}-*"
-          CIBW_ARCHS: aarch64
-          CIBW_PROJECT_REQUIRES_PYTHON: ">=3.8"
-          CIBW_BEFORE_BUILD: "cd bindings/python && python setup.py build"
-          CIBW_BUILD_VERBOSITY: 3
+          CIBW_BUILD: "cp${{ matrix.python-version }}-*"
+          CIBW_ARCHS: "aarch64"
+          CIBW_BEFORE_BUILD: "curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y && source $HOME/.cargo/env && rustup default nightly-2024-05-04 && rustup target add aarch64-unknown-linux-gnu && pip install setuptools setuptools_rust wheel"
           CIBW_ENVIRONMENT_LINUX: PATH="$PATH:$HOME/.cargo/bin" CARGO_NET_GIT_FETCH_WITH_CLI=true
+
       - uses: actions/upload-artifact@v3
         with:
           name: wheelhouse
-          path: ./wheelhouse/*.whl
+          path: wheelhouse/*.whl
 
   build_sdist:
     name: sdist
@@ -72,12 +104,12 @@ jobs:
       - name: Build sdist
         run: |
           pip install --upgrade build
-          cd bindings/python
           python -m build --sdist
+        working-directory: bindings/python
       - uses: actions/upload-artifact@v3
         with:
           name: sdist
-          path: ./dist/*.tar.gz
+          path: bindings/python/dist/*.tar.gz
 
   upload_to_pypi:
     name: Upload to PyPI
@@ -92,10 +124,13 @@ jobs:
         run: pip install twine
       - uses: actions/download-artifact@v3
         with:
-          name: dist
-          path: dist
+          path: ./artifacts
+      - name: List files in the artifact directory
+        run: ls -R ./artifacts
       - name: Upload Distribution to PyPI
         env:
           TWINE_USERNAME: __token__
           TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
-        run: twine upload dist/*
+        run: |
+          twine upload ./artifacts/sdist/*
+          twine upload ./artifacts/wheelhouse/*
