--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        os: [windows-latest, macos-latest]
         python-version: [38, 39, 310, 311, 312]
     steps:
       - uses: actions/checkout@v4
@@ -65,6 +65,44 @@ jobs:
       #   with:
       #     name: wheelhouse
       #     path: wheelhouse/*.whl
+
+  build_wheels_linux:
+    name: Build wheels on Linux for Python ${{ matrix.python-version }}
+    runs-on: ubuntu-latest
+    services:
+      docker:
+        image: quay.io/pypa/manylinux2014_x86_64:latest
+        options: --user root
+    strategy:
+      matrix:
+        python-version: [38, 39, 310, 311, 312]
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.x'
+
+      - name: Install Rust
+        run: |
+          curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
+          source $HOME/.cargo/env
+          rustup default nightly-2024-05-04
+
+      - name: Build and repair wheels
+        run: |
+          python -m pip install --upgrade pip
+          pip install setuptools wheel setuptools_rust
+          python setup.py bdist_wheel
+          auditwheel repair dist/*.whl --plat manylinux2014_x86_64 -w dist/
+        working-directory: bindings/python
+
+      - uses: actions/upload-artifact@v3
+        with:
+          name: wheelhouse
+          path: bindings/python/dist/*.whl
+
 
   build_wheels_aarch64:
     name: py${{ matrix.python-version }} on ${{ matrix.os }} (aarch64)
