--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -62,58 +62,28 @@ jobs:
   build_wheels_linux:
     name: Build wheels on Linux for Python ${{ matrix.python-version }}
     runs-on: ubuntu-latest
-    services:
-      docker:
-        image: quay.io/pypa/manylinux2014_x86_64:latest
-        options: --user root
     strategy:
+      fail-fast: false
       matrix:
+        os: [ubuntu-latest]
         python-version: [38, 39, 310, 311, 312]
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.x'
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install setuptools wheel setuptools_rust
-        working-directory: bindings/python
-
-      - name: Install Rust
-        run: |
-          curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
-          source $HOME/.cargo/env
-          rustup default nightly-2024-05-04
-
-      # - name: Build and repair wheels
-      #   run: |
-      #     python -m pip install --upgrade pip
-      #     pip install setuptools wheel setuptools_rust
-      #     python setup.py bdist_wheel
-      #     auditwheel repair dist/*.whl --plat manylinux2014_x86_64 -w dist/
-      #   working-directory: bindings/python
-        
       - name: Build Wheels
-        run: |
-          python setup.py bdist_wheel
-        working-directory: bindings/python
-
-      - name: Repair Wheels with Auditwheel (Only on Linux)
-        if: runner.os == 'Linux'
-        run: |
-          pip install auditwheel
-          auditwheel repair bindings/python/dist/*.whl --plat manylinux2014_x86_64 -w bindings/python/dist/
-        working-directory: .
-
+        uses: pypa/cibuildwheel@v2.16.5
+        with:
+          output-dir: wheelhouse
+          package-dir: ./bindings/python
+        env:
+          CIBW_BUILD: "cp${{ matrix.python-version }}-*"
+          CIBW_BEFORE_BUILD: "curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y && source $HOME/.cargo/env && rustup default nightly-2024-05-04 && pip install setuptools setuptools_rust wheel"
+          CIBW_ENVIRONMENT_LINUX: PATH="$PATH:$HOME/.cargo/bin" CARGO_NET_GIT_FETCH_WITH_CLI=true
 
       - uses: actions/upload-artifact@v3
         with:
           name: wheelhouse
-          path: bindings/python/dist/*.whl
+          path: wheelhouse/*.whl
 
 
   build_wheels_aarch64:
