--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -14,36 +14,38 @@ jobs:
       fail-fast: false
       matrix:
         os: [windows-latest, macos-13]
-        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
+        python-version: [38, 39, 310, 311, 312]
     steps:
       - uses: actions/checkout@v4
-
-      - name: Set up Python
+      - name: Install Python
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install setuptools wheel setuptools_rust
-        working-directory: bindings/python
 
       - name: Install Rust nightly
         uses: actions-rs/toolchain@v1
         with:
           toolchain: nightly-2024-05-04
           override: true
-
       - name: Build Wheels
-        run: |
-          python setup.py bdist_wheel
-        working-directory: bindings/python
+        uses: pypa/cibuildwheel@v2.18.0
+        with:
+          output-dir: wheelhouse
+          package-dir: ./bindings/python
+        env:
+          CIBW_BUILD: "cp${{ matrix.python-version | replace('.', '') }}-*"
+          CIBW_SKIP: "*musllinux_* *i686*"
+          CIBW_BEFORE_BUILD: |
+            curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
+            source $HOME/.cargo/env
+            rustup default nightly-2024-05-04
+            pip install setuptools setuptools_rust wheel
+          CIBW_ENVIRONMENT: PATH="$PATH:$HOME/.cargo/bin" CARGO_NET_GIT_FETCH_WITH_CLI=true
 
       - uses: actions/upload-artifact@v3
         with:
           name: wheelhouse
-          path: bindings/python/dist/*.whl
+          path: wheelhouse/*.whl
 
   build_wheels_linux:
     name: py${{ matrix.python-version }} on ${{ matrix.os }} (x64)
