--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -13,37 +13,83 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        os: [windows-latest, ubuntu-latest, macos-13]
         python-version: [38, 39, 310, 311, 312]
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.x'
+      # - name: Install Python
+      #   uses: actions/setup-python@v4
+      #   with:
+      #     python-version: ${{ matrix.python-version }}
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install setuptools wheel setuptools_rust
-        working-directory: bindings/python
-
-      - name: Install Rust nightly
-        uses: actions-rs/toolchain@v1
-        with:
-          toolchain: nightly-2024-05-04
-          override: true
+      # - name: Install Rust nightly
+      #   uses: actions-rs/toolchain@v1
+      #   with:
+      #     toolchain: nightly-2024-05-04
+      #     override: true
 
       - name: Build Wheels
-        run: |
-          python setup.py bdist_wheel
-        working-directory: bindings/python
+        uses: pypa/cibuildwheel@v2.18.0
+        with:
+          output-dir: wheelhouse
+          package-dir: ./bindings/python
+          build-frontend: build
+          build-verbosity: 1
+        env:
+          CIBW_BUILD: "cp${{ matrix.python-version }}-*"
+          CIBW_SKIP: "*-manylinux_i686 *-musllinux_i686 *-win32"
+          CIBW_TEST_SKIP: "*-macosx_arm64"
+          CIBW_MANYLINUX_X86_64_IMAGE: "manylinux2014"
+          CIBW_MANYLINUX_AARCH64_IMAGE: "manylinux2014"
+          CIBW_ARCHS_MACOS: "x86_64 arm64"
 
+          CIBW_BEFORE_BUILD_LINUX: |
+            curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
+            source $HOME/.cargo/env
+            rustup default nightly-2024-05-04
+            pip install setuptools setuptools_rust wheel
+          CIBW_ENVIRONMENT_LINUX: PATH="$PATH:$HOME/.cargo/bin"
+
+          CIBW_BEFORE_BUILD_MACOS: |
+            rustup default nightly-2024-05-04
+            rustup target add aarch64-apple-darwin
+            pip install setuptools setuptools_rust wheel
+          CIBW_ENVIRONMENT_MACOS: PATH="$PATH:$HOME/.cargo/bin"
+
+          CIBW_BEFORE_BUILD_WINDOWS: |
+            rustup default nightly-2024-05-04
       - uses: actions/upload-artifact@v3
         with:
           name: wheelhouse
-          path: bindings/python/dist/*.whl
+          path: wheelhouse/*.whl
+
+  # build_wheels_linux:
+  #   name: py${{ matrix.python-version }} on ${{ matrix.os }} (x64)
+  #   runs-on: ${{ matrix.os }}
+  #   strategy:
+  #     fail-fast: false
+  #     matrix:
+  #       os: [ubuntu-latest]
+  #       python-version: [38, 39, 310, 311, 312]
+  #   steps:
+  #     - uses: actions/checkout@v4
+  #     - name: Build Wheels
+  #       uses: pypa/cibuildwheel@v2.16.5
+  #       with:
+  #         output-dir: wheelhouse
+  #         package-dir: ./bindings/python
+  #       env:
+  #         CIBW_BUILD: "cp${{ matrix.python-version }}-*"
+  #         CIBW_SKIP: "*musllinux_* *i686*"
+  #         CIBW_BEFORE_BUILD: "curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y && source $HOME/.cargo/env && rustup default nightly-2024-05-04 && pip install setuptools setuptools_rust wheel"
+  #         CIBW_ENVIRONMENT_LINUX: PATH="$PATH:$HOME/.cargo/bin" CARGO_NET_GIT_FETCH_WITH_CLI=true
+
+  #     - uses: actions/upload-artifact@v3
+  #       with:
+  #         name: wheelhouse
+  #         path: wheelhouse/*.whl
+
 
   build_wheels_aarch64:
     name: py${{ matrix.python-version }} on ${{ matrix.os }} (aarch64)
@@ -60,21 +106,6 @@ jobs:
         uses: docker/setup-qemu-action@v3
         with:
           platforms: arm64
-
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.x'
-
-      - name: Install Rust nightly
-        uses: actions-rs/toolchain@v1
-        with:
-          toolchain: nightly-2024-05-04
-          override: true
-          target: aarch64-unknown-linux-gnu
-
-      - name: Install cibuildwheel
-        run: python -m pip install cibuildwheel==2.16.5
 
       - name: Build Wheels (ARM64)
         uses: pypa/cibuildwheel@v2.16.5
