--- a/.github/workflows/test_python_bindings.yml
+++ b/.github/workflows/test_python_bindings.yml
@@ -53,11 +53,11 @@ jobs:
 
       - name: Install Built Wheel
         run: |
-          pip install wheelhouse/*.whl
+          pip install wheelhouse/*cp${{ matrix.python.tag }}-*.whl
 
       - name: Install Test Dependencies
         run: |
-          run: pip install "pytest>=8.0.0" "numpy>=1.25.0"
+          pip install "pytest>=8.0.0" "numpy>=1.25.0"
       - name: Run Tests
         run: |
           pytest tests
