--- a/.github/workflows/test_python_bindings.yml
+++ b/.github/workflows/test_python_bindings.yml
@@ -53,7 +53,7 @@ jobs:
 
       - name: Install Built Wheel
         run: |
-          pip install wheelhouse/*cp${{ matrix.python.tag }}-*.whl
+          pip install wheelhouse/*cp${{ matrix.python.tag }}-musllinux*.whl
 
       - name: Install Test Dependencies
         run: |
