--- a/.github/workflows/test_python_bindings.yml
+++ b/.github/workflows/test_python_bindings.yml
@@ -61,4 +61,4 @@ jobs:
       - name: Run Tests
         run: |
           pytest tests
-        working-directory: rustynum/bindings/python
+        working-directory: bindings/python
