--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -68,7 +68,7 @@ jobs:
           platforms: arm64
 
       - name: Build Wheels (ARM64)
-        uses: pypa/cibuildwheel@v2.18
+        uses: pypa/cibuildwheel@v2.18.0
         with:
           output-dir: wheelhouse
           package-dir: ./bindings/python
@@ -76,11 +76,11 @@ jobs:
           CIBW_BUILD: "cp${{ matrix.python-version }}-*"
           CIBW_ARCHS: "aarch64"
           CIBW_BEFORE_BUILD: "curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y && source $HOME/.cargo/env && rustup default nightly-2024-05-04 && rustup target add aarch64-unknown-linux-gnu && pip install setuptools setuptools_rust wheel"
-          CIBW_ENVIRONMENT_LINUX: PATH="$PATH:$HOME/.cargo/bin" CARGO_NET_GIT_FETCH_WITH_CLI=true
+          CIBW_ENVIRONMENT_LINUX: 'PATH="$PATH:$HOME/.cargo/bin" CARGO_NET_GIT_FETCH_WITH_CLI=true'
 
       - uses: actions/upload-artifact@v4
         with:
-          name: wheelhouse-${{ matrix.os }}-py${{ matrix.python-version }}
+          name: wheelhouse-aarch64-py${{ matrix.python-version }}
           path: wheelhouse/*.whl
 
   build_sdist:
