Do not cancel parallel builds but only queue them.

--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -56,7 +56,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     concurrency:
       group: aarch64-build
-      cancel-in-progress: true
+      cancel-in-progress: false
     strategy:
       fail-fast: false
       matrix:
