--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -52,7 +52,7 @@ jobs:
     name: py${{ matrix.python-version }} on aarch64
     runs-on: ubuntu-latest
     timeout-minutes: 90
-    # Give ARM builds a unique concurrency group for each run so they won’t cancel each other.
+    # Give ARM builds a unique concurrency group for each run so they won't cancel each other.
     concurrency:
       group: aarch64-${{ github.run_id }}
       cancel-in-progress: false
@@ -86,7 +86,14 @@ jobs:
         env:
           CIBW_BUILD: "cp${{ matrix.python-version }}-*"
           CIBW_ARCHS: "aarch64"
-          CIBW_BEFORE_BUILD: "curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y && source $HOME/.cargo/env && rustup default nightly-2024-05-04 && rustup target add aarch64-unknown-linux-gnu && pip install setuptools setuptools_rust wheel"
+          CIBW_BEFORE_BUILD: |
+            curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs -o rustup-init.sh
+            chmod +x rustup-init.sh
+            ./rustup-init.sh -y
+            source $HOME/.cargo/env
+            rustup default nightly-2024-05-04
+            rustup target add aarch64-unknown-linux-gnu
+            pip install setuptools setuptools_rust wheel
           CIBW_ENVIRONMENT_LINUX: 'PATH="$PATH:$HOME/.cargo/bin" CARGO_NET_GIT_FETCH_WITH_CLI=true'
 
       - uses: actions/upload-artifact@v4
