--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -51,7 +51,7 @@ jobs:
 
   build_wheels_aarch64:
     name: py${{ matrix.python-version }} on aarch64
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04-arm
     timeout-minutes: 120
     strategy:
       fail-fast: false
@@ -59,11 +59,6 @@ jobs:
         python-version: [38, 39, 310, 311, 312]
     steps:
       - uses: actions/checkout@v4
-
-      - name: Setup QEMU for ARM
-        uses: docker/setup-qemu-action@v3
-        with:
-          platforms: arm64
 
       - name: Cache Rust toolchain
         uses: actions/cache@v3
