Optimise build size

--- a/bindings/python/Cargo.toml
+++ b/bindings/python/Cargo.toml
@@ -11,3 +11,8 @@ crate-type = ["cdylib"]
 [dependencies]
 pyo3 = { version = "0.19.2", features = ["extension-module"] }
 rustynum-rs = { path = "../../rustynum-rs" }
+
+[profile.release]
+lto = true
+strip = true
+panic = "abort"
